--- a/styles/style.css
+++ b/styles/style.css
@@ -30,12 +30,14 @@ a {
   text-decoration: none;
 }
 
-
+section {
+  margin: 0;
+  padding: 0;
+}
 
 .navbar .logo {
-  /* font-weight: 700; */
-  
-  font-size: 2rem;
+  margin: 1rem;
+  font-size: 1.3rem;
   color: var(--clr-white);
   text-transform: uppercase;
 }
@@ -62,7 +64,6 @@ header .img-circle {
   max-width: 210px;
     margin: auto;
     display: block;
-    
 }
 
 .img-circle {
@@ -112,8 +113,6 @@ h2 {
   text-decoration: underline;
 }
 
-
-
 .section-secondary span {
   color: var(--clr-primary-color);
 }
@@ -156,6 +155,14 @@ h5 {
   font-size: 1.3rem;
   text-decoration: underline;
   color: var(--clr-dark-color);
+}
+
+.section-ordery h3{
+  text-align: center;
+}
+
+.section-ordery p{
+  background-color: #8884FF;
 }
 
 .section-ordery span {
@@ -201,7 +208,7 @@ input[type = "submit"] {
   display: block;
 }
 
-.nav { 
+.nav.menu-btn { 
   position: fixed;
   z-index: 999;
   width: 66%;
@@ -253,9 +260,10 @@ ul h1 {
   text-align: center;
 }
 
-.testimonials-section {
+.testimonials-section h1{
   background-color: var(--clr-text-color);
-  color: white;
+  color: var(--clr-primary-color);
+  text-decoration: underline;
 }
 
 .testimonials-section li {
@@ -263,7 +271,7 @@ ul h1 {
   border: 2px solid #000;
   text-align: center;
   padding: 2rem 1rem;
-  width: 38%;
+  width: 65%;
   margin: 0 auto 5rem auto;
   border-radius: 3rem;
 }
@@ -277,6 +285,64 @@ form {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.nav ul {
+  list-style: none;
+  text-align: right;
+  }
+
+/* Responsive */
+@media only screen and (min-width: 768px){
+  .mobile-menu, 
+  .mobile-menu-exit {
+    display: none;
+  }
+
+.navbar .container {
+    display: grid;
+    grid-template-columns: 12rem auto;
+    justify-content: unset;
+  }
+
+  ul li  {
+    text-decoration: none;
+  }
+
+.navbar .nav{
+    display: flex;
+    justify-content: space-around;
+    background: none;
+    position: unset;
+    }
+
+  .navbar .nav ul {
+    display: flex;
+    
+  }
+
+
+  .navbar .nav a{
+    color: black;
+    font-size: 1rem;
+    padding: 2rem 1rem;
+  }
+
+  .navbar .nav ul.menu-primary {
+    margin: 0;
+    text-decoration: none;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .container {
+    width: 1024px;
+    margin: 0 auto;
+  }
+
+  section {
+    padding: 2rem 4rem;
+  }
 }
 
 
